Add first attempt at version-controlled Nix config
Still need to sort out what will go here versus the system-level NixOS
config, which I haven't added here yet.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "xcompose"]
 	path = vendor/xcompose
 	url = https://github.com/kragen/xcompose
+[submodule "nixpkgs/rust-nightly-nix"]
+	path = nixpkgs/rust-nightly-nix
+	url = https://github.com/solson/rust-nightly-nix.git
