new box who dis

--- a/debian-packages.desktop
+++ b/debian-packages.desktop
@@ -7,15 +7,12 @@ fonts-f500
 fonts-inconsolata
 fonts-junicode
 fonts-mathjax
-gcc-doc
-gdb
 gnuplot-x11
 grafx2
-iwyu
-manpages-dev
 maxima
 mednafen
-mplayer
+mpv
+mutt
 redshift
 screengrab
 solfege
@@ -25,8 +22,10 @@ sxiv
 texlive
 timidity
 unclutter
+urlview
 vice
 xchm
+xdm
 xfonts-terminus
 xscreensaver
 xsel
