Add some missing packages

--- a/debian-packages.desktop
+++ b/debian-packages.desktop
@@ -22,15 +22,18 @@ suckless-tools
 sxiv
 texlive
 timidity
+uim-xim
 unclutter
 urlview
 vice
 xchm
 xdm
 xfonts-terminus
+xinput
 xscreensaver
 xsel
 xserver-xorg
+xwrits
 zathura
 zathura
 zathura-djvu
